[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi-socketio>=0.0.10",
    "fastapi[standard]>=0.115.5",
    "langchain-anthropic>=0.3.0",
    "langchain>=0.3.7",
    "langchain-openai>=0.2.8",
]
